Add /Exit API
